updated with Secure export for mongo