@@ -26,6 +26,7 @@ public class JobApprovalController {
     private final JobApprovalService jobApprovalService;
     private final DbConnectionService dbConnectionService;
     private final CosConnectionService cosConnectionService;
+    private final com.enterprise.seedm.repository.UserRepository userRepository;
     private final ObjectMapper objectMapper;
 
     @PostMapping("/request")
@@ -46,21 +47,36 @@ public class JobApprovalController {
             // Try to get department from source connection
             if (configDetailsMap.containsKey("source")) {
                 Map<String, Object> sourceMap = (Map<String, Object>) configDetailsMap.get("source");
-                if (sourceMap.containsKey("id")) {
-                    DbConnection sourceConnection = dbConnectionService.getConnection(Long.valueOf(sourceMap.get("id").toString()));
-                    if (sourceConnection != null) {
-                        department = sourceConnection.getDepartment();
-                    }
+                if (sourceMap.containsKey("id") && sourceMap.get("id") != null) {
+                    try {
+                        DbConnection sourceConnection = dbConnectionService.getConnection(Long.valueOf(sourceMap.get("id").toString()));
+                        if (sourceConnection != null) {
+                            department = sourceConnection.getDepartment();
+                        }
+                    } catch (Exception ignored) {}
+                }
+                if (department == null && sourceMap.containsKey("cosId") && sourceMap.get("cosId") != null) {
+                    try {
+                        CosConnection cosConnection = cosConnectionService.getConnection(Long.valueOf(sourceMap.get("cosId").toString()));
+                        if (cosConnection != null) {
+                            department = cosConnection.getDepartment();
+                        }
+                    } catch (Exception ignored) {}
                 }
             }
 
             // If department not found, try destination connection
             if (department == null && configDetailsMap.containsKey("dest")) {
                 Map<String, Object> destMap = (Map<String, Object>) configDetailsMap.get("dest");
-                if (destMap.containsKey("id")) {
+                if (destMap.containsKey("id") && destMap.get("id") != null) {
                     DbConnection destConnection = dbConnectionService.getConnection(Long.valueOf(destMap.get("id").toString()));
                     if (destConnection != null) {
                         department = destConnection.getDepartment();
+                    }
+                } else if (destMap.containsKey("cosId") && destMap.get("cosId") != null) {
+                    CosConnection cosConnection = cosConnectionService.getConnection(Long.valueOf(destMap.get("cosId").toString()));
+                    if (cosConnection != null) {
+                        department = cosConnection.getDepartment();
                     }
                 }
             }
@@ -87,12 +103,16 @@ public class JobApprovalController {
     @GetMapping
     public List<JobRequest> getAllJobs(@RequestParam(required = false) String department, HttpServletRequest servletRequest) {
         HttpSession session = servletRequest.getSession(false);
+        String username = session != null ? (String) session.getAttribute("user") : null;
         String role = session != null ? (String) session.getAttribute("role") : null;
         boolean isAdmin = role != null && "ADMIN".equalsIgnoreCase(role);
 
         if (isAdmin) {
             if (department != null && !department.trim().isEmpty() && !"ALL".equalsIgnoreCase(department.trim())) {
-                List<String> depts = Arrays.asList(department.trim().split(","));
+                List<String> depts = Arrays.stream(department.trim().split(","))
+                        .map(String::trim)
+                        .filter(s -> !s.isEmpty())
+                        .toList();
                 return jobApprovalService.getAllJobs(depts);
             }
             return jobApprovalService.getAllJobs(null);
@@ -111,25 +131,40 @@ public class JobApprovalController {
                 }
             }
             if (userDepts.isEmpty() && session.getAttribute("department") != null) {
-                userDepts.add((String) session.getAttribute("department"));
+                String d = (String) session.getAttribute("department");
+                if (!"NONE".equalsIgnoreCase(d) && !"ALL".equalsIgnoreCase(d)) {
+                    userDepts.add(d);
+                }
+            }
+            if (username != null) {
+                com.enterprise.seedm.model.AppUser user = userRepository.findByUsername(username);
+                if (user != null && user.getDepartments() != null && !user.getDepartments().isEmpty()) {
+                    userDepts.clear();
+                    for (com.enterprise.seedm.model.Department d : user.getDepartments()) {
+                        userDepts.add(d.getName());
+                    }
+                }
             }
         }
 
         if (department != null && !department.trim().isEmpty() && !"ALL".equalsIgnoreCase(department.trim())) {
-            List<String> requestedDepts = Arrays.asList(department.trim().split(","));
+            List<String> requestedDepts = Arrays.stream(department.trim().split(","))
+                    .map(String::trim)
+                    .filter(s -> !s.isEmpty())
+                    .toList();
             List<String> allowedDepts = requestedDepts.stream()
-                    .filter(userDepts::contains)
-                    .collect(java.util.stream.Collectors.toList());
+                    .filter(rd -> userDepts.stream().anyMatch(ud -> ud.equalsIgnoreCase(rd)))
+                    .toList();
             if (allowedDepts.isEmpty()) {
                 return List.of();
             }
             return jobApprovalService.getAllJobs(allowedDepts);
         }
 
-        if (userDepts.isEmpty()) {
+        if (userDepts.isEmpty() && (username == null || username.trim().isEmpty())) {
             return List.of();
         }
-        return jobApprovalService.getAllJobs(userDepts);
+        return jobApprovalService.getAllJobsForUser(userDepts, username);
     }
 
     @GetMapping("/{id}")
